# Julia

./: .dockerignore  .gitignore  Dockerfile  Makefile  cert.pem  config.ini  function_app.py  julia.Rproj  key.pem  pyproject.toml  requirements.txt  ruff.toml
docs/: roadmap.md  text.txt
julia/: __init__.py
ui/: README.md  markdownlint.config  package-lock.json  package.json
